--- a/craft/templates/_layouts/site.html
+++ b/craft/templates/_layouts/site.html
@@ -26,7 +26,7 @@
 {# Set the `bodyClass` variable to the entry's section handle if there is one,
    or the first URI segment (this is used by the parent template) #}
 {% if bodyClass is not defined %}
-	{% set bodyClass = entry is defined ? entry.section.handle : craft.request.firstSegment %}
+	{% set bodyClass = entry is defined ? entry.section.handle : craft.app.request.segments|first %}
 {% endif %}
 
 {# Set the `title` variable to the nav item that matches the first segment #}
@@ -56,12 +56,12 @@
 	<header id="header">
 		<div class="flex">
 			<div class="g1-flex4 g2-flex6 g3-flex12">
-				<h1><a href="{{ siteUrl }}"><img src="{{ craft.config.assetsBaseUrl }}/images/happylager.svg" width="300" height="125" alt="Happy Lager - Enjoying Every Bit - Since 2006"></a></h1>
+				<h1><a href="{{ siteUrl }}"><img src="{{ craft.app.config.general.assetsBaseUrl }}/images/happylager.svg" width="300" height="125" alt="Happy Lager - Enjoying Every Bit - Since 2006"></a></h1>
 				<nav>
 					<ul>
 						{% for slug, item in nav %}
 							<li>
-								<a href="{{ url(slug) }}" {% if craft.request.firstSegment == slug %}class="sel"{% endif %}>
+								<a href="{{ url(slug) }}" {% if craft.app.request.segments|first == slug %}class="sel"{% endif %}>
 									<strong>{{ item.title }}</strong>
 									<span>-</span>
 									<em>{{ item.desc }}</em>
@@ -81,7 +81,7 @@
 	<footer id="footer">
 		<div class="flex">
 			<div class="g1-flex4 g2-flex3 g3-flex6">
-				<img src="{{ craft.config.assetsBaseUrl }}/images/hl.svg" width="76" height="76" alt="H.L.">
+				<img src="{{ craft.app.config.general.assetsBaseUrl }}/images/hl.svg" width="76" height="76" alt="H.L.">
 				<p class="copyright">{{ footer.copyrightNotice|replace('{year}', now|date('Y')) }}</p>
 			</div>
 			<div class="g1-flex4 g2-flex3 g3-flex6">
